Reference to piano teaching added to section id=bio

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			</section>
 			<section id="bio" class="bio">
 					<h2>Linda Crisp</h2>
-					<p>Hi, my name is Linda Crisp, Grad dip mus, LTCL(T), FISM. I am an enhanced DBS certified violin and viola teacher, working from my home in Dibden Purlieu, near Hythe on the Waterside, an area nestled between the New Forest and Southampton Water in Hampshire. I have taught students from as far and wide as Romsey, Winchester, Basingstoke, Sway, Milford on Sea, Brockenhurst, Lymington, Dibden Purlieu, Hythe, Holbury, Langley, Blackfield, Hong Kong, New Zealand and Australia!</p>
+					<p>Hi, my name is Linda Crisp, Grad dip mus, LTCL(T), FISM. I am an enhanced DBS certified violin, viola and piano teacher, working from my home in Dibden Purlieu, near Hythe on the Waterside, an area nestled between the New Forest and Southampton Water in Hampshire. I have taught students from as far and wide as Romsey, Winchester, Basingstoke, Sway, Milford on Sea, Brockenhurst, Lymington, Dibden Purlieu, Hythe, Holbury, Langley, Blackfield, Hong Kong, New Zealand and Australia!</p>
 					<div class="bio-nav">
 					<nav class="bio-nav-bar">
 						<li class="bio-nav-bar-list rise"><a href="#music-education">Music Education</a></li>
